# GPUDbug2

./: .gitignore  CMakeLists.txt  Makefile  README.md  version.h.in
.github/workflows/: build.yml
Resources/: Unit1.lfm
Resources/Backup/: GPUDbug2.ui
src/: Unit1.cpp  Unit1.pas  debugger.cpp  debugger.h  gpudebugger.cpp  gpudebugger.h  main.cpp  mainwindow.cpp  mainwindow.h
src/Backup/: GPUDbug2.cpp  GPUDbug2.h  RegBank1MouseUp.cpp
vs2022/: GPUDbug2.sln  GPUDbug2.vcxproj  GPUDbug2.vcxproj.filters
